# kinectv2-tcp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
parser/: parser.cpp  parser.hpp
tcp/: CMakeLists.txt  tcp.hpp
